--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-./frontend/node_modules
 /frontend/node_modules
-frontend/node_modules
 node_modules
 /node_modules
-./backend/node_modules
 /backend/node_modules
-backend/node_modules
+/backend/reference.js
